[package]
name = "packetrecorder"
version = "0.1.0"
edition = "2021"

[dependencies]
pcap = "2.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
chrono = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
etherparse = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.6", features = ["v4"] }
libc = "0.2"
