[package]
name = "packetrecorder"
version = "0.1.0"
edition = "2021"

[dependencies]
pcap = "2.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
chrono = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
etherparse = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.6", features = ["v4"] }
libc = "0.2"
object_store = { version = "0.9", features = ["aws", "gcp", "azure", "http"] }
pcap-file = "2.0"
url = "2.5"
tch = "0.15"
candle-core = "0.3.3"
candle-nn = "0.3.3"
curl = "0.4"
syslog = "6.1"
tracing-syslog = "0.0.0"
hex = "0.4"
httparse = "1.8"
dns-parser = "0.8"
nom = "7.1"
base64 = "0.21"
openssl = { version = "0.10", features = ["vendored"] }
tls-parser = "0.11"
x509-parser = "0.15"
netflow_parser = "0.2"
# sflow parsing often requires custom implementation or specific crates
# using nom for custom parsing if needed, but adding a placeholder for now
