[package]
name = "packetrecorder"
version = "0.1.0"
edition = "2021"

[dependencies]
pcap = "2.0"
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
chrono = "0.4"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }
crossbeam-channel = "0.5"
etherparse = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.6", features = ["v4"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
prometheus = "0.13"
lazy_static = "1.4"
libc = "0.2"
object_store = { version = "0.9", features = ["aws", "gcp", "azure", "http"] }
pcap-file = "2.0"
url = "2.5"
tch = "0.15"
candle-core = "0.3.3"
candle-nn = "0.3.3"
hf-hub = "0.3"
candle-transformers = "0.3.3"
curl = "0.4"
syslog = "6.1"
tracing-syslog = "0.0.0"
hex = "0.4"
httparse = "1.8"
dns-parser = "0.8"
nom = "7.1"
base64 = "0.21"
openssl = { version = "0.10", features = ["vendored"] }
tls-parser = "0.11"
x509-parser = "0.15"
netflow_parser = "0.2"
reqwest = { version = "0.11", features = ["json"] }
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
bytes = "1.5"
tokio-stream = { version = "0.1", features = ["sync"] }
flate2 = "1.0"
zip = "0.6"
infer = "0.15"
sha2 = "0.10"
serde_yaml = "0.9"
# sflow parsing often requires custom implementation or specific crates
# using nom for custom parsing if needed, but adding a placeholder for now

[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"

[build-dependencies]
tonic-build = "0.11"
